PROJECT(udpprobe)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

SET(CMAKE_CXX_FLAGS_DEBUG "-O0")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2")

SET(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Werror -g -ggdb")

SET(CMAKE_BUILD_TYPE Debug)
# SET(CMAKE_BUILD_TYPE Release)

# SET(CMAKE_USE_RELATIVE_PATHS ON)
SET(CMAKE_VERBOSE_MAKEFILE True)

MESSAGE("PROJECT_SOURCE_DIR=" ${PROJECT_SOURCE_DIR})
MESSAGE("PROJECT_BINARY_DIR=" ${PROJECT_BINARY_DIR})
MESSAGE("CMAKE_BUILD_TYPE=" ${CMAKE_BUILD_TYPE})
MESSAGE("CMAKE_CXX_FLAGS_DEBUG=" ${CMAKE_CXX_FLAGS_DEBUG})
MESSAGE("CMAKE_CXX_FLAGS_RELEASE=" ${CMAKE_CXX_FLAGS_RELEASE})
MESSAGE("CMAKE_CXX_FLAGS=" ${CMAKE_CXX_FLAGS})

SET(UDPPROBECLI_SRC udpprobecli.cpp)
SET(UDPECHOSVR_SRC udpechosvr.cpp)

ADD_EXECUTABLE(udpprobecli ${UDPPROBECLI_SRC})
TARGET_LINK_LIBRARIES(udpprobecli boost_program_options.a pthread)

INSTALL(TARGETS udpprobecli RUNTIME DESTINATION "${PROJECT_SOURCE_DIR}/../bin") 

ADD_EXECUTABLE(udpechosvr ${UDPECHOSVR_SRC})

INSTALL(TARGETS udpechosvr RUNTIME DESTINATION "${PROJECT_SOURCE_DIR}/../bin")